--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <h1 style="background-color: red;">nyaaaaa</h1>
      <img src="./FB_IMG_1662078081174.jpg" alt="">
      <br>
-    <a href="./tonch.html" type="botom">okey polilla</a>
-
+<a href="./tonch.html">ok polilla</a>
 </body>
 </html>
