--- a/tonch.html
+++ b/tonch.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>perro tocando sarten</title>
 </head>
 <body>
-    <iframe src="https://youtube.com/shorts/5GyJK3K_LoI?feature=share" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/shorts/5GyJK3K_LoI" frameborder="1000"></iframe>
 </body>
 </html>
